--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cssnano": "^5.1.14",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.0",
+    "node-sass": "^8.0.0",
     "postcss-loader": "^7.0.1",
+    "sass-loader": "^13.2.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
